# rust-crud-api

./: Cargo.toml  Makefile  README.md
src/: db.rs  endpoints.rs  main.rs  validations.rs
src/endpoints/: admin.rs  routine.rs
src/schema/: routine.rs
src/validations/: routine.rs
